--- a/generators/xamarin-forms/templates/Droid/packages.config
+++ b/generators/xamarin-forms/templates/Droid/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="2.0.2" targetFramework="monoandroid71" />
-  <package id="MvvmLightLibs" version="5.4.1" targetFramework="monoandroid71" />
-  <package id="Newtonsoft.Json" version="11.0.1" targetFramework="monoandroid71" />
+  <package id="CommonServiceLocator" version="2.0.4" targetFramework="monoandroid71" />
+  <package id="MvvmLightLibs" version="5.4.1.1" targetFramework="monoandroid71" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Annotations" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.4.0.2" targetFramework="monoandroid71" />
@@ -19,5 +19,5 @@
   <package id="Xamarin.Android.Support.v7.Palette" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
-  <package id="Xamarin.Forms" version="2.5.0.121934" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms" version="3.4.0.1008975" targetFramework="monoandroid71" />
 </packages>
